--- a/index.html
+++ b/index.html
@@ -136,6 +136,59 @@
             background: linear-gradient(45deg, #333, #444, #555);
             color: white;
         }
+
+        :root {
+            --bg-color: #f5f7fa;
+            --card-bg: #ffffff;
+            --text-color: #1f2937;
+            --accent-color: #3b82f6;
+            --button-bg: #3b82f6;
+            --button-text: #ffffff;
+        }
+
+        [data-theme="dark"] {
+            --bg-color: #111827;
+            --card-bg: #1f2937;
+            --text-color: #f5f7fa;
+            --accent-color: #f97316;
+            --button-bg: #f97316;
+            --button-text: #ffffff;
+        }
+
+        body {
+            background-color: var(--bg-color);
+            color: var(--text-color);
+        }
+
+        /* Tema butonu */
+        #theme-toggle {
+            position: fixed;
+            top: 1rem;
+            right: 1rem;
+            background-color: var(--button-bg);
+            color: var(--button-text);
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 8px;
+            cursor: pointer;
+            z-index: 1000;
+            transition: background-color 0.3s ease;
+        }
+
+        #theme-toggle:hover {
+            background-color: var(--accent-color);
+        }
+
+        .project-item {
+            background-color: var(--card-bg);
+            color: var(--text-color);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .project-item:hover {
+            background-color: var(--accent-color);
+            color: white;
+        }
     </style>
 </head>
 
@@ -145,6 +198,7 @@
     <header>
         <h1>Muhammet Mustafa HASTAOĞLUGİL Portfolio</h1>
     </header>
+    <button id="theme-toggle">🌓 Theme</button>
 
     <section class="about">
         <h2>About Me</h2>
@@ -180,7 +234,7 @@
             </div>
         </div>
 
-         <div class="project-item">
+        <div class="project-item">
             <h3>Bottle Runner Gun</h3>
             <iframe width="100%" height="225" src="https://youtube.com/embed/NyJEd7xxyP4?feature=share" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -243,7 +297,7 @@
                 </a>
             </div>
         </div>
-        
+
         <div class="project-item">
             <h3>Wheel Up Clicker</h3>
             <iframe src="https://youtube.com/embed/Gu-XTNs5ZvI?feature=share" allowfullscreen></iframe>
@@ -278,7 +332,7 @@
             </div>
         </div>
 
-         <div class="project-item">
+        <div class="project-item">
             <h3>Poly Smash Ball</h3>
             <iframe src="https://youtube.com/embed/QqQ3u8zOjC4?feature=share" allowfullscreen></iframe>
             <div class="project-links">
@@ -301,7 +355,7 @@
             </div>
         </div>
 
-         <div class="project-item">
+        <div class="project-item">
             <h3>Coin Surfer</h3>
             <iframe src="https://youtube.com/embed/qQKNu_yu7FY?feature=share" allowfullscreen></iframe>
             <div class="project-links">
@@ -311,7 +365,7 @@
             </div>
         </div>
 
-         <div class="project-item">
+        <div class="project-item">
             <h3>Saw Car</h3>
             <iframe src="https://youtube.com/embed/cAtLTuNi4dc?feature=share" allowfullscreen></iframe>
             <div class="project-links">
@@ -321,7 +375,7 @@
             </div>
         </div>
 
-         <div class="project-item">
+        <div class="project-item">
             <h3>Join the Team</h3>
             <iframe src="https://youtube.com/embed/Un-EgWZGRm8?feature=share" allowfullscreen></iframe>
             <div class="project-links">
@@ -341,7 +395,7 @@
             </div>
         </div>
 
-         <div class="project-item">
+        <div class="project-item">
             <h3>Furniture Factory</h3>
             <iframe src="https://youtube.com/embed/5bPQn_cYca0?feature=share" allowfullscreen></iframe>
             <div class="project-links">
@@ -374,13 +428,18 @@
     </section>
 
     <div class="social-icons">
-        <a href="https://www.linkedin.com/in/muhammet-mustafa-hastaoğlugil-420999236/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/muhammet-mustafa-hastaoğlugil-420999236/" target="_blank"><i
+                class="fab fa-linkedin"></i></a>
     </div>
 
     <footer>
         <p>2024 Muhammet Mustafa HASTAOĞLUGİL</p>
     </footer>
-
+    const toggleBtn = document.getElementById('theme-toggle');
+    toggleBtn.addEventListener('click', () => {
+    const isDark = document.documentElement.dataset.theme === 'dark';
+    document.documentElement.dataset.theme = isDark ? '' : 'dark';
+    });
     <script src="script.js"></script>
 </body>
 
